Intermittent SUMMARY: AddressSanitizer: access-violation /builds/worker/checkouts/gecko/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:46 in mozilla::RemoteSpellcheckEngineChild::SetCurrentDictionaryFromList
Categories
(Core :: Spelling checker, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox98 | --- | unaffected |
firefox99 | --- | unaffected |
firefox100 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: dminor)
References
(Regression)
Details
(4 keywords)
Crash Data
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=372086669&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/DY_gFwCjSpKNkFDdVL7URg/runs/0/artifacts/public/logs/live_backing.log
[task 2022-03-23T18:26:28.495Z] 18:26:28 INFO - TEST-START | toolkit/content/tests/browser/browser_autoscroll_disabled_on_editable_content.js
[task 2022-03-23T18:26:32.693Z] 18:26:32 INFO - GECKO(1436) | =================================================================
[task 2022-03-23T18:26:32.698Z] 18:26:32 ERROR - GECKO(1436) | ==1708==ERROR: AddressSanitizer: access-violation on unknown address 0x000000000038 (pc 0x7ffb86ebedd8 bp 0x007c84dfc440 sp 0x007c84dfc360 T0)
[task 2022-03-23T18:26:32.699Z] 18:26:32 INFO - GECKO(1436) | ==1708==The signal is caused by a READ memory access.
[task 2022-03-23T18:26:32.700Z] 18:26:32 INFO - GECKO(1436) | ==1708==Hint: address points to the zero page.
[task 2022-03-23T18:26:33.296Z] 18:26:33 INFO - GECKO(1436) | =================================================================
[task 2022-03-23T18:26:33.306Z] 18:26:33 ERROR - GECKO(1436) | ==812==ERROR: AddressSanitizer: access-violation on unknown address 0x000000000038 (pc 0x7ffb86ebedd8 bp 0x00b93dbfc720 sp 0x00b93dbfc640 T0)
[task 2022-03-23T18:26:33.307Z] 18:26:33 INFO - GECKO(1436) | ==812==The signal is caused by a READ memory access.
[task 2022-03-23T18:26:33.307Z] 18:26:33 INFO - GECKO(1436) | ==812==Hint: address points to the zero page.
[task 2022-03-23T18:26:33.893Z] 18:26:33 INFO - GECKO(1436) | ==1708==WARNING: Failed to use and restart external symbolizer!
[task 2022-03-23T18:26:34.038Z] 18:26:34 INFO - GECKO(1436) | MEMORY STAT | vsize 19422562MB | vsizeMaxContiguous 65026108MB | residentFast 900MB
[task 2022-03-23T18:26:34.046Z] 18:26:34 INFO - TEST-OK | toolkit/content/tests/browser/browser_autoscroll_disabled_on_editable_content.js | took 5550ms
[task 2022-03-23T18:26:34.099Z] 18:26:34 INFO - checking window state
[task 2022-03-23T18:26:34.129Z] 18:26:34 INFO - TEST-START | toolkit/content/tests/browser/browser_autoscroll_disabled_on_links.js
[task 2022-03-23T18:26:34.505Z] 18:26:34 INFO - GECKO(1436) | #0 0x7ffb86ebedd7 in mozilla::RemoteSpellcheckEngineChild::SetCurrentDictionaryFromList /builds/worker/checkouts/gecko/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:46
[task 2022-03-23T18:26:34.513Z] 18:26:34 INFO - GECKO(1436) | #1 0x7ffb86f31974 in mozSpellChecker::SetCurrentDictionaryFromList /builds/worker/checkouts/gecko/extensions/spellcheck/src/mozSpellChecker.cpp:522
[task 2022-03-23T18:26:34.514Z] 18:26:34 INFO - GECKO(1436) | #2 0x7ffb834aa533 in mozilla::EditorSpellCheck::SetFallbackDictionary::<lambda_7>::operator() /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1118
[task 2022-03-23T18:26:34.516Z] 18:26:34 INFO - GECKO(1436) | #3 0x7ffb834a8db0 in mozilla::MozPromise<bool,nsresult,1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1026:11',`lambda at /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1027:11'>::DoResolveOrRejectInternal /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:850
[task 2022-03-23T18:26:34.517Z] 18:26:34 INFO - GECKO(1436) | #4 0x7ffb78ce5cc1 in mozilla::MozPromise<bool,nsresult,1>::ThenValueBase::ResolveOrRejectRunnable::Run /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:487
[task 2022-03-23T18:26:34.518Z] 18:26:34 INFO - GECKO(1436) | #5 0x7ffb798e1d4d in mozilla::RunnableTask::Run /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:467
[task 2022-03-23T18:26:34.519Z] 18:26:34 INFO - GECKO(1436) | #6 0x7ffb79894da1 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:778
[task 2022-03-23T18:26:34.520Z] 18:26:34 INFO - GECKO(1436) | #7 0x7ffb798912ac in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:612
[task 2022-03-23T18:26:34.521Z] 18:26:34 INFO - GECKO(1436) | #8 0x7ffb79891c74 in mozilla::TaskController::ProcessPendingMTTask /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:390
[task 2022-03-23T18:26:34.522Z] 18:26:34 INFO - GECKO(1436) | #9 0x7ffb798ea551 in mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:124:7'>::Run /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531
[task 2022-03-23T18:26:34.522Z] 18:26:34 INFO - GECKO(1436) | #10 0x7ffb798c17d3 in nsThread::ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1173
[task 2022-03-23T18:26:34.523Z] 18:26:34 INFO - GECKO(1436) | #11 0x7ffb798d2e1c in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:467
[task 2022-03-23T18:26:34.524Z] 18:26:34 INFO - GECKO(1436) | #12 0x7ffb7aed6ddd in mozilla::ipc::MessagePump::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:85
[task 2022-03-23T18:26:34.525Z] 18:26:34 INFO - GECKO(1436) | #13 0x7ffb7adee325 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324
[task 2022-03-23T18:26:34.526Z] 18:26:34 INFO - GECKO(1436) | #14 0x7ffb7adee0f5 in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306
[task 2022-03-23T18:26:34.527Z] 18:26:34 INFO - GECKO(1436) | #15 0x7ffb82e7049a in nsBaseAppShell::Run /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137
[task 2022-03-23T18:26:34.527Z] 18:26:34 INFO - GECKO(1436) | #16 0x7ffb8306011c in nsAppShell::Run /builds/worker/checkouts/gecko/widget/windows/nsAppShell.cpp:614
[task 2022-03-23T18:26:34.528Z] 18:26:34 INFO - GECKO(1436) | #17 0x7ffb8773b734 in XRE_RunAppShell /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:870
[task 2022-03-23T18:26:34.529Z] 18:26:34 INFO - GECKO(1436) | #18 0x7ffb7adee325 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324
[task 2022-03-23T18:26:34.530Z] 18:26:34 INFO - GECKO(1436) | #19 0x7ffb7adee0f5 in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306
[task 2022-03-23T18:26:34.530Z] 18:26:34 INFO - GECKO(1436) | #20 0x7ffb8773ab03 in XRE_InitChildProcess /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:729
[task 2022-03-23T18:26:34.531Z] 18:26:34 INFO - GECKO(1436) | #21 0x7ff70057209c in NS_internal_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:327
[task 2022-03-23T18:26:34.532Z] 18:26:34 INFO - GECKO(1436) | #22 0x7ff7005717bd in wmain /builds/worker/checkouts/gecko/toolkit/xre/nsWindowsWMain.cpp:167
[task 2022-03-23T18:26:34.532Z] 18:26:34 INFO - GECKO(1436) | #23 0x7ff70066e8c7 in __scrt_common_main_seh d:\agent\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
[task 2022-03-23T18:26:34.533Z] 18:26:34 INFO - GECKO(1436) | #24 0x7ffbc2297033 in BaseThreadInitThunk+0x13 (C:\Windows\System32\KERNEL32.DLL+0x180017033)
[task 2022-03-23T18:26:34.534Z] 18:26:34 INFO - GECKO(1436) | #25 0x7ffbc2982650 in RtlUserThreadStart+0x20 (C:\Windows\SYSTEM32\ntdll.dll+0x180052650)
[task 2022-03-23T18:26:34.534Z] 18:26:34 INFO - GECKO(1436) | AddressSanitizer can not provide additional info.
[task 2022-03-23T18:26:34.535Z] 18:26:34 INFO - GECKO(1436) | SUMMARY: AddressSanitizer: access-violation /builds/worker/checkouts/gecko/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:46 in mozilla::RemoteSpellcheckEngineChild::SetCurrentDictionaryFromList
[task 2022-03-23T18:26:34.536Z] 18:26:34 INFO - GECKO(1436) | ==1708==ABORTING
[task 2022-03-23T18:26:34.608Z] 18:26:34 INFO - GECKO(1436) | ==812==WARNING: Failed to use and restart external symbolizer!
[task 2022-03-23T18:26:35.146Z] 18:26:35 INFO - GECKO(1436) | #0 0x7ffb86ebedd7 in mozilla::RemoteSpellcheckEngineChild::SetCurrentDictionaryFromList /builds/worker/checkouts/gecko/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:46
[task 2022-03-23T18:26:35.149Z] 18:26:35 INFO - GECKO(1436) | #1 0x7ffb86f31974 in mozSpellChecker::SetCurrentDictionaryFromList /builds/worker/checkouts/gecko/extensions/spellcheck/src/mozSpellChecker.cpp:522
[task 2022-03-23T18:26:35.151Z] 18:26:35 INFO - GECKO(1436) | #2 0x7ffb834aa533 in mozilla::EditorSpellCheck::SetFallbackDictionary::<lambda_7>::operator() /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1118
[task 2022-03-23T18:26:35.151Z] 18:26:35 INFO - GECKO(1436) | #3 0x7ffb834a8db0 in mozilla::MozPromise<bool,nsresult,1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1026:11',`lambda at /builds/worker/checkouts/gecko/editor/spellchecker/EditorSpellCheck.cpp:1027:11'>::DoResolveOrRejectInternal /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:850
[task 2022-03-23T18:26:35.152Z] 18:26:35 INFO - GECKO(1436) | #4 0x7ffb78ce5cc1 in mozilla::MozPromise<bool,nsresult,1>::ThenValueBase::ResolveOrRejectRunnable::Run /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:487
[task 2022-03-23T18:26:35.153Z] 18:26:35 INFO - GECKO(1436) | #5 0x7ffb798e1d4d in mozilla::RunnableTask::Run /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:467
[task 2022-03-23T18:26:35.154Z] 18:26:35 INFO - GECKO(1436) | #6 0x7ffb79894da1 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:778
[task 2022-03-23T18:26:35.154Z] 18:26:35 INFO - GECKO(1436) | #7 0x7ffb798912ac in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:612
[task 2022-03-23T18:26:35.155Z] 18:26:35 INFO - GECKO(1436) | #8 0x7ffb79891c74 in mozilla::TaskController::ProcessPendingMTTask /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:390
[task 2022-03-23T18:26:35.155Z] 18:26:35 INFO - GECKO(1436) | #9 0x7ffb798ea551 in mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:124:7'>::Run /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531
[task 2022-03-23T18:26:35.156Z] 18:26:35 INFO - GECKO(1436) | #10 0x7ffb798c17d3 in nsThread::ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1173
[task 2022-03-23T18:26:35.157Z] 18:26:35 INFO - GECKO(1436) | #11 0x7ffb798d2e1c in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:467
[task 2022-03-23T18:26:35.157Z] 18:26:35 INFO - GECKO(1436) | #12 0x7ffb7aed6ddd in mozilla::ipc::MessagePump::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:85
[task 2022-03-23T18:26:35.158Z] 18:26:35 INFO - GECKO(1436) | #13 0x7ffb7adee325 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324
[task 2022-03-23T18:26:35.158Z] 18:26:35 INFO - GECKO(1436) | #14 0x7ffb7adee0f5 in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306
[task 2022-03-23T18:26:35.158Z] 18:26:35 INFO - GECKO(1436) | #15 0x7ffb82e7049a in nsBaseAppShell::Run /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137
[task 2022-03-23T18:26:35.160Z] 18:26:35 INFO - GECKO(1436) | #16 0x7ffb8306011c in nsAppShell::Run /builds/worker/checkouts/gecko/widget/windows/nsAppShell.cpp:614
[task 2022-03-23T18:26:35.161Z] 18:26:35 INFO - GECKO(1436) | #17 0x7ffb8773b734 in XRE_RunAppShell /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:870
[task 2022-03-23T18:26:35.163Z] 18:26:35 INFO - GECKO(1436) | #18 0x7ffb7adee325 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324
[task 2022-03-23T18:26:35.165Z] 18:26:35 INFO - GECKO(1436) | #19 0x7ffb7adee0f5 in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306
[task 2022-03-23T18:26:35.165Z] 18:26:35 INFO - GECKO(1436) | #20 0x7ffb8773ab03 in XRE_InitChildProcess /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:729
[task 2022-03-23T18:26:35.166Z] 18:26:35 INFO - GECKO(1436) | #21 0x7ff70057209c in NS_internal_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:327
[task 2022-03-23T18:26:35.166Z] 18:26:35 INFO - GECKO(1436) | #22 0x7ff7005717bd in wmain /builds/worker/checkouts/gecko/toolkit/xre/nsWindowsWMain.cpp:167
[task 2022-03-23T18:26:35.167Z] 18:26:35 INFO - GECKO(1436) | #23 0x7ff70066e8c7 in __scrt_common_main_seh d:\agent\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
[task 2022-03-23T18:26:35.167Z] 18:26:35 INFO - GECKO(1436) | #24 0x7ffbc2297033 in BaseThreadInitThunk+0x13 (C:\Windows\System32\KERNEL32.DLL+0x180017033)
[task 2022-03-23T18:26:35.168Z] 18:26:35 INFO - GECKO(1436) | #25 0x7ffbc2982650 in RtlUserThreadStart+0x20 (C:\Windows\SYSTEM32\ntdll.dll+0x180052650)
[task 2022-03-23T18:26:35.169Z] 18:26:35 INFO - GECKO(1436) | AddressSanitizer can not provide additional info.
[task 2022-03-23T18:26:35.170Z] 18:26:35 INFO - GECKO(1436) | SUMMARY: AddressSanitizer: access-violation /builds/worker/checkouts/gecko/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:46 in mozilla::RemoteSpellcheckEngineChild::SetCurrentDictionaryFromList
[task 2022-03-23T18:26:35.170Z] 18:26:35 INFO - GECKO(1436) | ==812==ABORTING
[task 2022-03-23T18:26:37.437Z] 18:26:37 INFO - GECKO(1436) | ###!!! [Parent][PCompositorManagerParent] Error: RunMessage(msgname=PCompositorBridge::Msg___delete__) Channel closing: too late to send/recv, messages will be lost
[task 2022-03-23T18:26:39.007Z] 18:26:39 INFO - GECKO(1436) | MEMORY STAT | vsize 19422543MB | vsizeMaxContiguous 65026108MB | residentFast 922MB
[task 2022-03-23T18:26:39.015Z] 18:26:39 INFO - TEST-OK | toolkit/content/tests/browser/browser_autoscroll_disabled_on_links.js | took 4881ms
[task 2022-03-23T18:26:39.045Z] 18:26:39 INFO - checking window state
[task 2022-03-23T18:26:39.072Z] 18:26:39 INFO - TEST-START | toolkit/content/tests/browser/browser_bug1170531.js
[task 2022-03-23T18:26:39.091Z] 18:26:39 INFO - GECKO(1436) | ###!!! [Parent][PImageBridgeParent] Error: RunMessage(msgname=PImageBridge::Msg_WillClose) Channel closing: too late to send/recv, messages will be lost
[task 2022-03-23T18:26:42.266Z] 18:26:42 INFO - GECKO(1436) | MEMORY STAT | vsize 19422592MB | vsizeMaxContiguous 65026108MB | residentFast 974MB
[task 2022-03-23T18:26:42.276Z] 18:26:42 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug1170531.js | took 3195ms
[task 2022-03-23T18:26:42.303Z] 18:26:42 INFO - checking window state
[task 2022-03-23T18:26:42.328Z] 18:26:42 INFO - TEST-START | toolkit/content/tests/browser/browser_bug1198465.js
[task 2022-03-23T18:26:42.876Z] 18:26:42 INFO - GECKO(1436) | MEMORY STAT | vsize 19422593MB | vsizeMaxContiguous 65026108MB | residentFast 979MB
[task 2022-03-23T18:26:42.888Z] 18:26:42 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug1198465.js | took 559ms
[task 2022-03-23T18:26:42.922Z] 18:26:42 INFO - checking window state
[task 2022-03-23T18:26:42.941Z] 18:26:42 INFO - TEST-START | toolkit/content/tests/browser/browser_bug1572798.js
[task 2022-03-23T18:26:45.195Z] 18:26:45 INFO - GECKO(1436) | [Child 7324, MediaDecoderStateMachine #1] WARNING: 123eba6a1940 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:331
[task 2022-03-23T18:26:45.242Z] 18:26:45 INFO - GECKO(1436) | MEMORY STAT | vsize 19422585MB | vsizeMaxContiguous 65026108MB | residentFast 985MB
[task 2022-03-23T18:26:45.245Z] 18:26:45 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug1572798.js | took 2298ms
[task 2022-03-23T18:26:45.274Z] 18:26:45 INFO - checking window state
[task 2022-03-23T18:26:45.301Z] 18:26:45 INFO - TEST-START | toolkit/content/tests/browser/browser_bug1693577.js
[task 2022-03-23T18:26:45.320Z] 18:26:45 INFO - GECKO(1436) | ###!!! [Parent][PImageBridgeParent] Error: RunMessage(msgname=PImageBridge::Msg_WillClose) Channel closing: too late to send/recv, messages will be lost
[task 2022-03-23T18:26:45.865Z] 18:26:45 INFO - GECKO(1436) | MEMORY STAT | vsize 19422588MB | vsizeMaxContiguous 65026108MB | residentFast 991MB
[task 2022-03-23T18:26:45.865Z] 18:26:45 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug1693577.js | took 559ms
[task 2022-03-23T18:26:45.894Z] 18:26:45 INFO - checking window state
[task 2022-03-23T18:26:45.919Z] 18:26:45 INFO - TEST-START | toolkit/content/tests/browser/browser_bug594509.js
[task 2022-03-23T18:26:46.365Z] 18:26:46 INFO - GECKO(1436) | MEMORY STAT | vsize 19430783MB | vsizeMaxContiguous 65026108MB | residentFast 999MB
[task 2022-03-23T18:26:46.378Z] 18:26:46 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug594509.js | took 457ms
[task 2022-03-23T18:26:46.403Z] 18:26:46 INFO - checking window state
[task 2022-03-23T18:26:46.425Z] 18:26:46 INFO - TEST-START | toolkit/content/tests/browser/browser_bug982298.js
[task 2022-03-23T18:26:47.004Z] 18:26:47 INFO - GECKO(1436) | MEMORY STAT | vsize 19430779MB | vsizeMaxContiguous 65026108MB | residentFast 1002MB
[task 2022-03-23T18:26:47.015Z] 18:26:47 INFO - TEST-OK | toolkit/content/tests/browser/browser_bug982298.js | took 579ms
[task 2022-03-23T18:26:47.060Z] 18:26:47 INFO - checking window state
[task 2022-03-23T18:26:47.076Z] 18:26:47 INFO - TEST-START | toolkit/content/tests/browser/browser_cancel_starting_autoscrolling_requested_by_background_tab.js
[task 2022-03-23T18:26:48.439Z] 18:26:48 INFO - GECKO(1436) | must wait for focus in content
[task 2022-03-23T18:26:49.457Z] 18:26:49 INFO - GECKO(1436) | must wait for focus in content
[task 2022-03-23T18:26:50.744Z] 18:26:50 INFO - GECKO(1436) | must wait for focus in content
[task 2022-03-23T18:26:50.906Z] 18:26:50 INFO - GECKO(1436) | MEMORY STAT | vsize 19430771MB | vsizeMaxContiguous 65026108MB | residentFast 1006MB
[task 2022-03-23T18:26:50.907Z] 18:26:50 INFO - TEST-OK | toolkit/content/tests/browser/browser_cancel_starting_autoscrolling_requested_by_background_tab.js | took 3825ms
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
Yes, I think so, I'll have a look.
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1402822
Updated•3 years ago
|
Assignee | ||
Comment 4•3 years ago
|
||
With the changes to EditorSpellCheck::SetFallbackDictionary to use a
promise chain to support calling either SetCurrentDictionaryFromList or
SetCurrentDictionaries as required, it is now possible that
RemoteSpellCheckEngineChild is destroyed by the time the second promise
runs. During destruction, RemoteSpellCheckEngineChild calls
mozSpellChecker::DeleteRemoteEngine, which sets mEngine to nullptr.
This patch adds a nullptr check for mEngine in both
SetCurrentDictionaryFromList and SetCurrentDictionaries.
Comment 6•3 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Updated•3 years ago
|
Updated•3 years ago
|
Description
•